--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A community, open-source, driven website to share $FADE information.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./server/index.js",
+    "build": "webpack --watch",
+    "start": "node ./server/index.js",
+    "compile": "webpack"
   },
   "author": "",
   "license": "MIT",
